add put and patch
