# code/logistics/public/swagger.json
@@ -140,7 +140,7 @@
 		"securitySchemes": {}
 	},
 	"info": {
-		"title": "Logistics",
+		"title": "logistics",
 		"version": "1.0.0",
 		"license": {
 			"name": "ISC"
@@ -237,7 +237,7 @@
 					}
 				]
 			},
-			"put": {
+			"patch": {
 				"operationId": "UpdateRoute",
 				"responses": {
 					"200": {
@@ -364,6 +364,47 @@
 						}
 					}
 				]
+			}
+		},
+		"/trucks/{id}": {
+			"put": {
+				"operationId": "UpdateTruck",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/expectedTruckJSON"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Trucks"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/expectedBodyTruck"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
