# code/logistics/src/application/controllers/truck/ITruckController.ts
@@ -16,4 +16,5 @@ export interface ITruckController {
     createTruck(req: expectedBodyTruck): Promise<expectedBodyTruck>;
     getTruckByRegistration(registration: string): Promise<expectedTruckJSON[]>;
     getTrucks(): Promise<expectedTruckJSON[]>;
+    updateTruck(idRoute:string, req: expectedBodyTruck): Promise<expectedTruckJSON>;
 }
